[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scenes/Profils_list_display.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Titre_font_70px.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/chargement.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/UI/menu.svg" type="Texture" id=6]
[ext_resource path="res://Fonts/Button_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/UI/floppy-disk.svg" type="Texture" id=8]
[ext_resource path="res://Scripts/Profil_Display.gd" type="Script" id=9]
[ext_resource path="res://Scenes/DisplayDialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/UI/factions/loge.svg" type="Texture" id=11]
[ext_resource path="res://Sprites/UI/factions/sororite.svg" type="Texture" id=12]
[ext_resource path="res://Sprites/UI/factions/avalon.svg" type="Texture" id=13]
[ext_resource path="res://Sprites/UI/factions/auroch.svg" type="Texture" id=14]
[ext_resource path="res://Sprites/UI/factions/naashti.svg" type="Texture" id=15]
[ext_resource path="res://Sprites/UI/factions/cartel.svg" type="Texture" id=16]
[ext_resource path="res://Sprites/UI/factions/khaliman.svg" type="Texture" id=17]
[ext_resource path="res://Sprites/UI/factions/aurlok.svg" type="Texture" id=18]
[ext_resource path="res://Sprites/UI/factions/utopie.svg" type="Texture" id=19]
[ext_resource path="res://Sprites/UI/factions/temple.svg" type="Texture" id=20]
[ext_resource path="res://Sprites/UI/factions/evades.svg" type="Texture" id=21]
[ext_resource path="res://Sprites/UI/factions/cobra.svg" type="Texture" id=22]
[ext_resource path="res://Sprites/UI/factions/triade.svg" type="Texture" id=23]
[ext_resource path="res://Sprites/UI/factions/sanctifies.svg" type="Texture" id=24]
[ext_resource path="res://Sprites/UI/factions/walosi.svg" type="Texture" id=25]
[ext_resource path="res://Sprites/UI/factions/rados.svg" type="Texture" id=26]
[ext_resource path="res://Scripts/SaveDialog.gd" type="Script" id=27]
[ext_resource path="res://Fonts/Text_font.tres" type="DynamicFont" id=28]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.109804, 0.105882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Faction" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 4 )
text = "Faction"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content Holder" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.002
margin_left = 24.0
margin_top = 88.0
margin_right = -24.0
margin_bottom = -94.048
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profils_list_display" parent="Content Holder" instance=ExtResource( 1 )]
margin_bottom = 844.0

[node name="SaveButton" type="Button" parent="Content Holder"]
visible = false
margin_top = 804.0
margin_right = 528.0
margin_bottom = 844.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sauvegarder"
icon = ExtResource( 8 )
flat = true
expand_icon = true

[node name="ColorRect" type="ColorRect" parent="Content Holder/SaveButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 42 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Factions" type="Control" parent="."]
anchor_right = 0.488
anchor_bottom = 0.93
margin_right = 21.912
margin_bottom = -8.32001
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Factions"]
anchor_bottom = 1.085
margin_right = 221.0
margin_bottom = -0.23999
mouse_filter = 1
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Factions"]
anchor_bottom = 1.0
margin_right = 301.0
margin_bottom = -8.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Factions/HBoxContainer"]
margin_right = 217.0
margin_bottom = 936.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tous" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_right = 217.0
margin_bottom = 51.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Tous les profils"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aurlok" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 217.0
margin_bottom = 106.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Aurlok"
icon = ExtResource( 18 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Aurlok"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.4, 0.2, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waga" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 217.0
margin_bottom = 161.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Waga"
icon = ExtResource( 14 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Waga"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.6, 0.4, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walosi" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 217.0
margin_bottom = 217.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Walosi"
icon = ExtResource( 25 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Walosi"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.6, 0.4, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avalon" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 221.0
margin_right = 217.0
margin_bottom = 272.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Avalon"
icon = ExtResource( 13 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Avalon"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0470588, 0.278431, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sanctifiés" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 217.0
margin_bottom = 327.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Sanctifiés"
icon = ExtResource( 24 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Sanctifiés"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0196078, 0.384314, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Temple" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 331.0
margin_right = 217.0
margin_bottom = 383.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Temple"
icon = ExtResource( 20 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Temple"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0196078, 0.384314, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cartel" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 387.0
margin_right = 217.0
margin_bottom = 438.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Cartel"
icon = ExtResource( 16 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Cartel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.572549, 0.129412, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Khaliman" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 442.0
margin_right = 217.0
margin_bottom = 493.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Khaliman"
icon = ExtResource( 17 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Khaliman"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.760784, 0.403922, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Evadés" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 497.0
margin_right = 217.0
margin_bottom = 548.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Evadés"
icon = ExtResource( 21 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Evadés"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.745098, 0.541176, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sororité" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 552.0
margin_right = 217.0
margin_bottom = 604.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Sororité"
icon = ExtResource( 12 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Sororité"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.745098, 0.541176, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loge" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 608.0
margin_right = 217.0
margin_bottom = 659.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Loge"
icon = ExtResource( 11 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Loge"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Naashti" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 663.0
margin_right = 217.0
margin_bottom = 714.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Naashti"
icon = ExtResource( 15 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Naashti"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.435294, 0.192157, 0.521569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rados" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 718.0
margin_right = 217.0
margin_bottom = 770.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Rados"
icon = ExtResource( 26 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Rados"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.341176, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Triade de jade" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 774.0
margin_right = 217.0
margin_bottom = 825.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Triade de Jade"
icon = ExtResource( 23 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Triade de jade"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0588235, 0.458824, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Garde Cobra" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 829.0
margin_right = 217.0
margin_bottom = 880.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Garde Cobra"
icon = ExtResource( 22 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Garde Cobra"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.301961, 0.588235, 0.494118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Utopie" type="Button" parent="Factions/HBoxContainer/VBoxContainer"]
margin_top = 884.0
margin_right = 217.0
margin_bottom = 936.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Utopie"
icon = ExtResource( 19 )
flat = true

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/VBoxContainer/Utopie"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0823529, 0.580392, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="TextureButton" parent="Factions/HBoxContainer"]
margin_left = 221.0
margin_right = 301.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="Factions/HBoxContainer/MenuButton"]
show_behind_parent = true
anchor_left = -0.093
anchor_right = 1.0
margin_left = 7.44
margin_bottom = 80.0
mouse_filter = 2
color = Color( 0.631373, 0.580392, 0.580392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveDialog" type="ConfirmationDialog" parent="."]
margin_left = -72.7778
margin_top = -169.714
margin_right = 232.222
margin_bottom = -40.7145
popup_exclusive = true
window_title = "Enregistrement"
dialog_text = "Choisissez un nom pour votre équipe :"
script = ExtResource( 27 )

[node name="LineEdit" type="LineEdit" parent="SaveDialog"]
margin_left = 8.0
margin_top = 22.0
margin_right = 297.0
margin_bottom = 92.9995
custom_fonts/font = ExtResource( 28 )
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Commun" parent="." instance=ExtResource( 3 )]
margin_bottom = -8.0

[node name="DisplayDialog" parent="." instance=ExtResource( 10 )]

[node name="icon" parent="." instance=ExtResource( 5 )]
visible = false
anchor_right = 1.0
margin_left = 288.0
margin_top = 512.0
margin_right = -288.0
margin_bottom = 512.0
[connection signal="pressed" from="Content Holder/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Tous" to="." method="_on_Tous_pressed"]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Aurlok" to="." method="_change_faction" binds= [ "Aurlok" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Waga" to="." method="_change_faction" binds= [ "Waga" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Walosi" to="." method="_change_faction" binds= [ "Walosi" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Avalon" to="." method="_change_faction" binds= [ "Avalon" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Sanctifiés" to="." method="_change_faction" binds= [ "Sanctifiés" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Temple" to="." method="_change_faction" binds= [ "Temple" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Cartel" to="." method="_change_faction" binds= [ "Cartel" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Khaliman" to="." method="_change_faction" binds= [ "Khaliman" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Evadés" to="." method="_change_faction" binds= [ "Evades" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Sororité" to="." method="_change_faction" binds= [ "Sororité" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Loge" to="." method="_change_faction" binds= [ "Loges" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Naashti" to="." method="_change_faction" binds= [ "Naashti" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Rados" to="." method="_change_faction" binds= [ "Rados" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Triade de jade" to="." method="_change_faction" binds= [ "Triade de Jade" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Garde Cobra" to="." method="_change_faction" binds= [ "Garde Cobra" ]]
[connection signal="pressed" from="Factions/HBoxContainer/VBoxContainer/Utopie" to="." method="_change_faction" binds= [ "Utopie" ]]
[connection signal="pressed" from="Factions/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="confirmed" from="SaveDialog" to="." method="_on_SaveDialog_confirmed"]
